# navigation_gui

./: .gitignore  .jshintrc  CMakeLists.txt  README.md  bower.json  gulpfile.js  index.html  package.json  package.xml  webserver.py
app/: index.html  objects.html
app/scripts/: object-detector.js  ros-connect-amigo.js
launch/: start.launch
test/: bower.json
