<?xml version="1.0"?>
<package>
  <name>navigation_gui</name>
  <version>0.0.0</version>
  <description>The navigation_gui package</description>

  <maintainer email="rayman747@hotmail.com">Ramon Wijnands</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbridge_suite</run_depend>

</package>
